--- a/public/index.html
+++ b/public/index.html
@@ -9,20 +9,43 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="stylesheet" href="/build/bundle.css" />
     <style>
+      * {
+        box-sizing: border-box;
+      }
+
       body {
         margin: auto;
         background-color: #ddd;
       }
 
       ul {
+        margin: 0;
+        padding: 0 5px;
         list-style: none;
       }
 
       form {
-        display: flex;
-        justify-content: center;
-        height: 100vh;
-        align-items: center;
+        background-color: #fff;
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        max-width: 500px;
+        margin: 30px auto;
+      }
+
+      label {
+        display: block;
+        padding: 10px;
+      }
+
+      textarea {
+        display: block;
+        width: 100%;
+        max-width: 100%;
+        height: 80px;
+      }
+
+      button {
+        border: none !important;
       }
     </style>
 
@@ -32,6 +55,30 @@
   <body>
     <form class="form_answer">
       <ul class="icons-bar"></ul>
+      <label>
+        <textarea></textarea>
+      </label>
+    </form>
+
+    <form class="form_answer">
+      <ul class="icons-bar"></ul>
+      <label>
+        <textarea></textarea>
+      </label>
+    </form>
+
+    <form class="form_answer">
+      <ul class="icons-bar"></ul>
+      <label>
+        <textarea></textarea>
+      </label>
+    </form>
+
+    <form class="form_answer">
+      <ul class="icons-bar"></ul>
+      <label>
+        <textarea></textarea>
+      </label>
     </form>
   </body>
 </html>
