Commit  all progress, it's work

--- a/public/index.html
+++ b/public/index.html
@@ -54,30 +54,34 @@
 
   <body>
     <form class="form_answer">
-      <ul class="icons-bar"></ul>
+      <div><ul class="icons-bar"></ul></div>
+
       <label>
-        <textarea></textarea>
+        <textarea class="field__input"></textarea>
       </label>
     </form>
 
     <form class="form_answer">
-      <ul class="icons-bar"></ul>
+      <div><ul class="icons-bar"></ul></div>
+
       <label>
-        <textarea></textarea>
+        <textarea class="field__input"></textarea>
       </label>
     </form>
 
     <form class="form_answer">
-      <ul class="icons-bar"></ul>
+      <div><ul class="icons-bar"></ul></div>
+
       <label>
-        <textarea></textarea>
+        <textarea class="field__input"></textarea>
       </label>
     </form>
 
     <form class="form_answer">
-      <ul class="icons-bar"></ul>
+      <div><ul class="icons-bar"></ul></div>
+
       <label>
-        <textarea></textarea>
+        <textarea class="field__input"></textarea>
       </label>
     </form>
   </body>
